<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="16"
                android:hint="@string/nombre"
                android:inputType="text"
                android:textSize="14sp"
                android:layout_marginVertical="20dp" />

            <DatePicker
                android:id="@+id/calendarView"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/editTextCel"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="16"
                android:hint="@string/telefono"
                android:inputType="text"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="16"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextDesc"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="16"
                android:hint="@string/descripcion"
                android:inputType="text"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="264dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:onClick="siguienteBtn"
                android:text="@string/txt_btn"
                android:textSize="12sp"
                android:theme="@style/MiBotonRaised" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>